--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -80,43 +80,88 @@ To explore the relationship between hapiness score and factors including economy
 &  \text{ Government Corruption } + \text{ Generosity } + \text{Dystopia Residual }
 \end{align*}
 
-There is a stong evidence that the hapiness score is and only is a simple average of these factors. Therefore, the relationship between hapiness score and these factors is no longer interesting to us.
+There is strong evidence that the happiness score is and only is a simple average of these factors. Therefore, the relationship between happiness score and these factors is no longer interesting to us.
 
-This situation also happens in 2016 and 2017 data. Besides, for 2018 and 2019 data, the orginization provide another set of variables which is also highly correlated with the hapiness score, but we have no mean to understand what those value represent, since they have been transformed in an unknown way.
+This situation also happens in 2016 and 2017 data. Besides, for 2018 and 2019 data, the organization provides another set of variables which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
 
-Instead of using the factors in the given dataset, we join another dataset, 
+Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by country. GDP, CPI and population data is downloaded from The World Bank. And area of each country is computed using the simple feature polygons provided in package `rnaturalearth`.
 
 
-```{r eval = FALSE}
-mod18 = lm(as.formula(paste('`', 
-                            colnames(h18)[3], "`~`",
-                            paste(colnames(h18)[c(4, 5, 6, 7, 8, 9)], collapse = "`+`"),
-                            '`',
-        sep = ""
-    )), data = h18)
-```
-
-```{r eval = FALSE}
-summary(mod18)
-```
-
-```{r eval = FALSE}
-mod19 = lm(as.formula(paste('`', 
-                            colnames(h19)[3], "`~`",
-                            paste(colnames(h19)[c(4, 5, 6, 7, 8, 9)], collapse = "`+`"),
-                            '`',
-        sep = ""
-    )), data = h19)
-```
-
-```{r eval = FALSE}
-summary(mod19)
-```
-
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(rnaturalearth)
 library(sf)
 world_map = ne_countries(returnclass = 'sf')
-is.na(sapply(h15$Country, match, table = world_map$name)) %>% sum()
+gdp = read_csv("Data/API_NY.GDP.MKTP.CD_DS2_en_csv_v2_1120928.csv", skip = 4)
+cpi = read_csv("Data/API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_1120899.csv", skip = 4)
+population = read_csv("Data/API_SP.POP.TOTL_DS2_en_csv_v2_1120881.csv", skip = 4)
 ```
+
+```{r}
+temp = h15 %>%
+  select(Country, `Happiness Score`) %>%
+  mutate(year = 2015)
+
+h16 %>%
+  select(Country, `Happiness Score`) %>%
+  mutate(year = 2016) %>%
+  rbind(temp) -> temp
+
+h17 %>%
+  select(Country, `Happiness Score` = Happiness.Score) %>%
+  mutate(year = 2017) %>%
+  rbind(temp) -> temp
+
+h18 %>%
+  select(Country = `Country or region`, `Happiness Score` = Score) %>%
+  mutate(year = 2018) %>%
+  rbind(temp) -> temp
+
+h19 %>%
+  select(Country = `Country or region`, `Happiness Score` = Score) %>%
+  mutate(year = 2019) %>%
+  rbind(temp) -> temp
+```
+
+```{r}
+hs = temp
+```
+
+```{r message=FALSE}
+population %>%
+  select(Country = `Country Name`, `2015`:`2019`) %>%
+  gather(key = 'year', value = 'population', `2015`:`2019`) %>%
+  mutate(year = as.numeric(year)) %>%
+  right_join(hs) -> hs
+
+gdp %>%
+  select(Country = `Country Name`, `2015`:`2019`) %>%
+  gather(key = 'year', value = 'gdp', `2015`:`2019`) %>%
+  mutate(year = as.numeric(year)) %>%
+  right_join(hs) -> hs
+
+cpi %>%
+  select(Country = `Country Name`, `2015`:`2019`) %>%
+  gather(key = 'year', value = 'cpi', `2015`:`2019`) %>%
+  mutate(year = as.numeric(year)) %>%
+  right_join(hs) -> hs
+```
+
+```{r warning=FALSE, message=FALSE}
+world_map$area = st_area(world_map) %>% as.numeric()
+
+as_tibble(world_map) %>%
+  select(area, name) %>%
+  right_join(hs, by = c('name' = 'Country')) -> hs
+
+```
+
+```{r}
+head(hs)
+```
+
+```{r}
+lm(log(`Happiness Score`)~log(area)+log(cpi)+log(gdp),data=hs) %>%
+  summary()
+```
+
 
