adding R package in reference

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,23 @@
+@Manual{rnaturalearth,
+    title = {rnaturalearth: World Map Data from Natural Earth},
+    author = {Andy South},
+    year = {2017},
+    note = {R package version 0.1.0},
+    url = {https://CRAN.R-project.org/package=rnaturalearth},
+  }
+  
+  
+@Article{relaimpo,
+    title = {Relative Importance for Linear Regression in R: The Package relaimpo},
+    author = {Ulrike Grömping},
+    journal = {Journal of Statistical Software},
+    year = {2006},
+    volume = {17},
+    number = {1},
+    pages = {1--27},
+  }
+  
+  
 @article{cleveland1990stl,
   title={{STL}: A seasonal-trend decomposition procedure based on loess},
   author={Cleveland, Robert B and Cleveland, William S and McRae, Jean E and Terpenning, Irma},
