--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -99,7 +99,7 @@ total_data <- list(top10_2015, data_2016, data_2017, data_2018, data_2019) %>%
   reduce(left_join, by = "Country")
 ```
 
-```{r score_trends}
+```{r score_trends, fig.cap = "The trends in happiness scores from 2015-2019 (based on the top10 countries in 2015)"}
 total_data_plot <- total_data %>%
   pivot_longer(c(`2015-01-01`,`2016-01-01`,`2017-01-01`,`2018-01-01`,`2019-01-01`), names_to = "year", values_to = "score") %>% 
   mutate(year = year(year))
