--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -32,7 +32,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, cache=TRUE, messages=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = FALSE, cache=FALSE, messages=FALSE, warning=FALSE)
 knitr::opts_chunk$set(fig.width = 8, fig.height = 5, fig.alig = "center")
 # Make sure you have the latest versions of rmarkdown and bookdown installed
 library(ggplot2)
@@ -70,9 +70,8 @@ world_map <-ne_countries(returnclass = "sf")
 \text{Hapiness score} = & \text{ GDP per Capita } + \text{ Family } + \text{ Life expectancy }+ \text{ Freedom } +   \\ 
 &  \text{ Government Corruption } + \text{ Generosity } + \text{Dystopia Residual }
 \end{align*}
-  The **table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, **Table \@ref(tab:Rsquared)** is close to 1 from 2015 to 2017,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
-  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries. GDP, CPI and population data is downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package @rnaturalearth.
-  
+  The **table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the $$R^2$$is close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
+  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries.There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` (@rnaturalearth). We select all the happiness scores between 2015-2019 to construct a new table for happiness score with new factors, therefore **Table \@ref(tab:table-FT)** and **Table \@ref(tab:table-LT)** can be displayed the first three data and the last three data about happiness scores in different years. In addition, we pick up thee variables such as gdp,cpi and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and joining them into one dataset,the new dataset with happiness score for analyzing the relative variable improtance is established in the **Table \@ref(tab:tableHS)**.
 ```{r lmmodel}
 model2015 <- lm(as.formula(paste('`', 
                             colnames(data2015)[4], "`~`",
@@ -94,18 +93,6 @@ model2017 <- lm(as.formula(paste('`',
     )), data = data2017)
 ```
 
-```{r Rsquared,fig.cap="R squared value from 2015 to 2017"}
-R15<-summary(model2015)$r.squared 
-R16<-summary(model2016)$r.squared 
-R17<-summary(model2017)$r.squared 
-x<-data.frame(R15,R16,R17)
-names(x)[1] <- "2015"
-names(x)[2] <- "2016"
-names(x)[3] <- "2017"
-x%>%kable(caption = ' R Squared in 2015-2017') %>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
-```
-
 ```{r model2015,fig.cap="Estimated coefficient in the LM model in 2015 dataset"}
 c_table <- summary(model2015)
 rownames(c_table$coefficients) = c_table$coefficients %>%
@@ -118,18 +105,19 @@ c_table$coefficients %>%
 ```
 
 
-\clearpage
+```{r Rsquared,fig.cap="R squared value from 2015 to 2017"}
+R15<-summary(model2015)$r.squared 
+R16<-summary(model2016)$r.squared 
+R17<-summary(model2017)$r.squared 
+x<-data.frame(R15,R16,R17)
+names(x)[1] <- "2015"
+names(x)[2] <- "2016"
+names(x)[3] <- "2017"
+x%>%kable(caption = ' R Squared in 2015-2017') %>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
+```
 
-
-
-## Variable importance
-
-  After comparing the different variables between 2015 and 2019, the **lmg** approach with package @relaimpo is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the $$R^2$$ with the consideration of the sequence of predictors appearing in the model. 
-  
-
-
-  
-```{r}
+```{r clean-data}
 temp <-data2015 %>%
   dplyr::select(1,`Happiness Score` = Happiness.Score) %>%
   mutate(year = 2015)
@@ -151,11 +139,21 @@ data2019 %>%
   rbind(temp) -> temp
 ```
 
-```{r}
+```{r table-FT,fig.cap="Selecting all happiness scores in different years"}
 happy_score<- temp
+#s<-data.frame(head(happy_score,3),tail(happy_score,3))
+
+head(happy_score,3)%>%kable(caption = "The first three data in happyiness scores")%>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
 ```
 
-```{r message=FALSE}
+```{r table-LT,fig.cap="Selecting all happiness scores in different years"}
+tail(happy_score,3)%>%kable(caption = "The last three data in happyiness scores") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
+```
+
+
+```{r clean-other-three-dataset}
 
 Population %>%
   dplyr::select(Country = `Country Name`, `2015`:`2019`) %>%
@@ -174,7 +172,7 @@ CPI %>%
   right_join(happy_score) -> happy_score
 ```
 
-```{r warning=FALSE, message=FALSE}
+```{r using-rnaturalearth}
 world_map$area = st_area(world_map) %>% as.numeric()
 as_tibble(world_map) %>%
   dplyr::select(area, name) %>%
@@ -182,14 +180,30 @@ as_tibble(world_map) %>%
 
 ```
 
-```{r}
+```{r tableHS,fig.cap="construct a new dataset for analysing happiness score"}
 happy_score<-happy_score%>% drop_na()
-head(happy_score)
+head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
 ```
 
-```{r}
+\clearpage
+
+
+
+## Variable importance
+
+  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` (@relaimpo) is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the $$R^2$$ with the consideration of the sequence of predictors appearing in the model. 
+  Firstly, we built up a **LM** model for the new happiness score dataset. By avoding the different scaling for each variables and checking the percentage marginal effect of each variable, using logarithmic method for setting up a linear regression model. Therefore, a **LM** model is shown :
+\begin{align*}
+\text{log(Happiness Score)} = & \text{ log(CPI)} +  \text{ log(GDP)}+\text{ log(Area)}+ \\
+& \text{ log(Population)} 
+\end{align*}
+  From**Table \@ref(tab:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors ($$R^2$$) is around 72.88%. For the four predictors, GDP with the higest value in four predictors contributed to 64.37% for the happiness scores,indicating that GDP factor is the most important for hanppiness score and it is related to the change of happiness scores(@gromping2015variable). On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population is almost at 3, indicating that there is a slight correlation of population with other variables in the model(@daoud2017multicollinearity).
+
+```{r variable-important}
 
 model <- lm(log(`Happiness Score`)~log(area)+log(cpi)+log(gdp)+log(population), data=happy_score)
+  
   relImportance<-model%>%relaimpo::calc.relimp(type="lmg",rela=TRUE)
   tibble('R^2' =relImportance$R2*100 , 'log(gpd)' = relImportance$lmg[3]*100,'log(population)' = relImportance$lmg[4]*100,'log(cpi)' = relImportance$lmg[2]*100,'log(area)' = relImportance$lmg[1]*100)%>%
   pivot_longer(cols = c('R^2', 'log(gpd)','log(population)','log(cpi)','log(area)'), names_to = "Relative importance",values_to = "Important(%)") %>%
@@ -197,9 +211,9 @@ model <- lm(log(`Happiness Score`)~log(area)+log(cpi)+log(gdp)+log(population), 
   kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
 ```
 
-```{r}
+```{r mulitilinearity}
 as.table(car::vif(model))%>%
-  kable(caption = 'Variable importance in happiness score') %>%
+  kable(caption = 'VIF procedures for checking multilinearity with each predictors') %>%
   kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
   
 ```
