adding refernce for lmg and multilinearity method

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,25 @@
+@article{gromping2015variable,
+  title={Variable importance in regression models},
+  author={Gr{\"o}mping, Ulrike},
+  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
+  volume={7},
+  number={2},
+  pages={137--152},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{daoud2017multicollinearity,
+  title={Multicollinearity and regression analysis},
+  author={Daoud, Jamal I},
+  booktitle={Journal of Physics: Conference Series},
+  volume={949},
+  number={1},
+  pages={012009},
+  year={2017},
+  organization={IOP Publishing}
+}
+
 @Manual{rnaturalearth,
     title = {rnaturalearth: World Map Data from Natural Earth},
     author = {Andy South},
